Home mobile : fix image hidden by titles issues

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -874,6 +874,26 @@ section.big-cta{
       }
     }
   }
+  @media (max-width: 480px) and (max-height: 800px){
+    header{
+      background: transparent;
+    }
+    section{
+      overflow: visible;
+      .superheros{
+        transform: translate(-3.25rem,-7rem);
+        padding: 3em;
+        display: none;
+      }
+    }
+    &.menu-close section .superheros{
+      display: block;
+    }
+    article h1{
+      bottom: 1rem;
+      margin-bottom: 0 !important;
+    }
+  }
 }
 
 /* Page découvrir */
@@ -1142,6 +1162,9 @@ section.big-cta{
         }
 
       }
+    }
+    ul li{
+      list-style-type: circle;
     }
   }
   aside{
